Fixed alternative demo.

--- a/samples/KristofferStrube.Blazor.FileSystem.WasmExample/Pages/SearchMastodon.razor
+++ b/samples/KristofferStrube.Blazor.FileSystem.WasmExample/Pages/SearchMastodon.razor
@@ -20,7 +20,7 @@
 @if (OriginPrivateDirectoryHandle is null)
 {
     <p style="color:red;">
-        The <a href="https://fs.spec.whatwg.org/">File System API</a> is only supported on few browsers, but most major vendors have committed to support it in the near future. So you might need to install alpha/beta release of your browser for this to work. So this demo will run without using it in this case which is not as efficient.
+        The <a href="https://fs.spec.whatwg.org/">File System API</a> is only supported on few browsers, but most major vendors have committed to support it in the near future. So you might need to install alpha/beta release of your browser for this to work. This demo will run without using it in this case as your browser does not support it. 😢
         <br />
         <small>(This is the case for Chrome on mobile devices.)</small>
     </p>
@@ -249,6 +249,7 @@
             {
                 // Create Suffix Tree.
                 var suffixTree = new NaiveSuffixTree(note.Content.First().ToLower());
+                suffixTrees.Add(note.Id, suffixTree);
             }
 
             Console.WriteLine("We hit something new.");
