Updated to use Nova's account instead as sample as mine was being limited.

--- a/samples/KristofferStrube.Blazor.FileSystem.WasmExample/Pages/SearchMastodon.razor
+++ b/samples/KristofferStrube.Blazor.FileSystem.WasmExample/Pages/SearchMastodon.razor
@@ -24,7 +24,7 @@
     </p>
 }
 <p>
-    You can make full text searches in my newest posts below once they have been downloaded. You can also download the posts of another user by typing in their identifier. It downloads these posts and check in the file system if we have already created a suffix search tree for the post and uses that instead of creating a new one if available. The suffix tree can do a fuzzy search efficiently which allows small errors in the written search query.
+    You can make full text searches in Novas (the creator of Hachyderm) newest posts below once they have been downloaded. You can also download the posts of another user by typing in their identifier. It downloads these posts and check in the file system if we have already created a suffix search tree for the post and uses that instead of creating a new one if available. The suffix tree can do a fuzzy search efficiently which allows small errors in the written search query.
 </p>
 
 <div class="input-group mb-3">
@@ -85,7 +85,7 @@
 }
 
 @code {
-    string profile = "@kristofferstrube@hachyderm.io";
+    string profile = "@nova@hachyderm.io";
     string search = "";
     string? profileFeedback;
     FileSystemDirectoryHandle? OriginPrivateDirectoryHandle;
