--- a/samples/KristofferStrube.Blazor.FileSystem.WasmExample/Shared/NavMenu.razor
+++ b/samples/KristofferStrube.Blazor.FileSystem.WasmExample/Shared/NavMenu.razor
@@ -20,6 +20,11 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="DirectoryExplorer">
+                <span class="oi oi-folder" aria-hidden="true"></span> Directory Explorer
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="Status">
                 <span class="oi oi-warning" aria-hidden="true"></span> API Coverage Status
             </NavLink>
